no side menu, buttons at bottom instead. Everything styled mostly

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
     "angular-calendar": "^0.31.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "firebase": "^10.11.1",
     "firebaseui": "^6.1.0",
     "ionicons": "^7.0.0",
